--- a/scss/block.scss
+++ b/scss/block.scss
@@ -135,6 +135,7 @@ nav.admin-nav button.active {
 }
 .admin-section {
   display: none;
+  margin-left: 50px;
 }
 .admin-section.active {
   display: block;
