--- a/scss/composition.scss
+++ b/scss/composition.scss
@@ -2,7 +2,7 @@ body {
     margin: 0;
     font-family: 'Montserrat', sans-serif;
     background-color: #121212;
-    color: #fff;
+    color: #ffffff;
   }
   
   header {
