--- a/scss/expression.scss
+++ b/scss/expression.scss
@@ -26,7 +26,7 @@ footer ul {
 
 /* Reservations Page Styling */
 .admin-page {
-    background: #f8f8f8;
+    background: #000000;
     padding: 2rem;
     font-family: 'Helvetica Neue', Arial, sans-serif;
     min-height: 100vh;
